<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Super Coach Tactic Board</string>
    <string name="action_bar_erase">Erase</string>
    <string name="action_bar_load">Load</string>
    <string name="action_bar_save">Save</string>
    <string name="action_bar_reset">Reset</string>
    <string name="action_bar_replay">Replay</string>
    <string name="action_bar_share">Share to</string>
    <string name="action_bar_undo">Undo</string>
    <string name="action_bar_save_dialog_title">Name</string>
    <string name="action_bar_load_dialog_title">Select a file</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="tab_full_ground">Full ground</string>
    <string name="tab_half_ground">Half ground</string>
    <string name="tab_save_data">Saved data</string>
    <string name="tab_settings">Settings</string>
    <string name="saved_data_list_item_confirm_dialog">Do you want to delete file </string>
    <string name="none_saved_data_hint">There are no data saved!</string>
    <string name="data_saved_success_hint">Data saved!</string>
    <string name="share_text">Sharing my board from Super Coach Tactic Board in Android!</string>
    <string name="share_title">Super Coach Tactic Board!</string>
    <string name="save_board_edittext_hint">My Tactic</string>
    <string name="choose_pen_color_dialog_title">Choose paint color</string>
    <string name="color_white">White</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_blue">Blue</string>
    <string name="color_red">Red</string>
    <string name="color_black">Black</string>
    <!-- settings -->
    <string name="settings_basketball">Basketball</string>
    <string name="settings_baseball">Baseball</string>
    <string name="settings_football">Football</string>
    <string name="settings_soccer">Soccer</string>
    <string name="settings_tennies">Tennis</string>
    <string name="settings_volleyball">Volleyball</string>
    <string name="settings_handball">Handball</string>
    <string name="settings_hockey">Hockey</string>
    <string name="settings_tchoukball">Tchoukball</string>
    <string name="settings_sport_type">Sports:</string>
    <string name="settings_function_backpress">Back key function:</string>
    <string name="settings_function_backpress_system">System</string>
    <string name="settings_function_backpress_disable">Disable</string>
    <string name="settings_function_backpress_undo">@string/action_bar_undo</string>

    <string name="setting_item_status">"Set items' behavior"</string>
    <string-array name="item_status">
        <item>Normal</item>
        <item>Static</item>
    </string-array>
    
    <string name="simple_data_widget_title">Tactics list</string>

</resources>