<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bj4.yhh.coachboard.MainActivity" >

    <item
        android:id="@+id/action_erase"
        android:icon="@drawable/erase"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_bar_erase"/>
    <item
        android:id="@+id/action_reset"
        android:icon="@drawable/reset"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_bar_reset"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_bar_save"/>
    <item
        android:id="@+id/action_load"
        android:icon="@drawable/load"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_bar_load"/>
    <item
        android:id="@+id/action_replay"
        android:icon="@drawable/replay"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_bar_replay"/>
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/undo"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_bar_undo"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/shareto"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_bar_share"/>

</menu>